Checkstyle fix