@@ -2,12 +2,11 @@ package core.mate.academy.service;
 
 import core.mate.academy.model.Bulldozer;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 public class BulldozerProducer implements MachineProducer<Bulldozer> {
     @Override
     public List<Bulldozer> get() {
-        return new ArrayList<Bulldozer>(Arrays.asList(new Bulldozer(), new Bulldozer()));
+        return new ArrayList<Bulldozer>(List.of(new Bulldozer(), new Bulldozer()));
     }
 }
