@@ -2,12 +2,11 @@ package core.mate.academy.service;
 
 import core.mate.academy.model.Excavator;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 public class ExcavatorProducer implements MachineProducer<Excavator> {
     @Override
     public List<Excavator> get() {
-        return new ArrayList<Excavator>(Arrays.asList(new Excavator(), new Excavator()));
+        return new ArrayList<>(List.of(new Excavator(), new Excavator()));
     }
 }
