@@ -2,12 +2,11 @@ package core.mate.academy.service;
 
 import core.mate.academy.model.Truck;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 public class TruckProducer implements MachineProducer<Truck> {
     @Override
     public List<Truck> get() {
-        return new ArrayList<Truck>(Arrays.asList(new Truck(), new Truck()));
+        return new ArrayList<Truck>(List.of(new Truck(), new Truck()));
     }
 }
